# py-site-w-md-files

./: .env  LICENSE  README.md  main.py  pyproject.toml
content/: file1.md  md tutorial.md  search.md
md-website-lib/: pyproject.toml
md-website-lib/src/md_website_lib/: __init__.py
md-website-pkg/: pyproject.toml
md-website-pkg/src/md_website_pkg/: __init__.py
root/: file1.md
routers/: browse.py
templates/: body  body_style  content  file  folder  header  header_style  html  navigation  style
utils/: files.py
