[project]
name = "md-website-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hyw208", email = "hyw208@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
md-website-pkg = "md_website_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
